--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="try">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Try Angular 1.5</title>
-	<script src="./js/angular.min.js"></script>
+	<!-- <script src="./js/angular.min.js"></script> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+	<script src="./js/app/app.module.js"></script>
+	<script src="./js/app/app.config.js"></script>
 </head>
 <style>
 	.new-class {
 		font-size: 72px;
 	}
 	.other-class {
-		font-size: {{font}};
+		font-size: 32px;
 	}
 </style>
 <body>
 	<h1 class="new-class" ng-class="{'other-class': name}">Hello, <span ng-if="name">{{name}}</span> <span ng-if="!name">World</span></h1>
 	<input type="text" ng-model="name">
-
-	<input type="text" ng-model="font">
 </body>
 </html>
