--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 	<title>Try Angular 1.5</title>
 	<!-- <script src="./js/angular.min.js"></script> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+
 	<script src="./js/app/app.module.js"></script>
 	<script src="./js/app/app.config.js"></script>
+
+	<script src="./js/app/blog-list/blog-list.module.js"></script>
+	<script src="./js/app/blog-list/blog-list.component.js"></script>
 </head>
 <style>
 	.new-class {
@@ -21,5 +25,10 @@
 <body>
 	<h1 class="new-class" ng-class="{'other-class': name}">Hello, <span ng-if="name">{{name}}</span> <span ng-if="!name">World</span></h1>
 	<input type="text" ng-model="name">
+
+	<div class="" ng-controller="BlogListController">
+		<h1 class="new-class">{{title}}</h1>
+		<button ng-click="clickTest()">Click me</button>
+	</div>
 </body>
 </html>
