--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 	<h1 class="new-class" ng-class="{'other-class': name}">Hello, <span ng-if="name">{{name}}</span> <span ng-if="!name">World</span></h1>
 	<input type="text" ng-model="name">
 
-	<div class="" ng-controller="BlogListController">
-		<h1 class="new-class">{{title}}</h1>
-		<button ng-click="clickTest()">Click me</button>
-	</div>
+	<blog-list> </blog-list>
 </body>
 </html>
